--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "swiper": "^11.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
