--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "aos": "^2.3.4",
     "swiper": "^11.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
