--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "aos": "^2.3.4",
+    "axios": "^1.9.0",
+    "openai": "^4.96.2",
     "swiper": "^11.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
