--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.9.0",
     "codemirror": "^6.0.1",
     "openai": "^4.96.2",
+    "qrcode": "^1.5.4",
     "swiper": "^11.2.6",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
+    "vue-qrcode": "^2.2.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
