--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "codemirror": "^6.0.1",
     "openai": "^4.96.2",
+    "pinia": "^3.0.2",
     "qrcode": "^1.5.4",
     "swiper": "^11.2.6",
     "vue": "^3.5.13",
