--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "codemirror": "^6.0.1",
     "openai": "^4.96.2",
     "pinia": "^3.0.2",
     "qrcode": "^1.5.4",
-
-    "sweetalert2": "^11.21.0",
-
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.2.6",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
