--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
     "vue-qrcode": "^2.2.2",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
