--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "chart": "^0.1.2",
     "chart.js": "^4.4.9",
     "codemirror": "^6.0.1",
     "openai": "^4.96.2",
