--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "openai": "^4.96.2",
     "pinia": "^3.0.2",
     "qrcode": "^1.5.4",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.6.13",
     "swiper": "^11.2.6",
     "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1",
     "vue-qrcode": "^2.2.2",
     "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
