--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "chart.js": "^4.4.9",
     "codemirror": "^6.0.1",
     "html5-qrcode": "^2.3.8",
+    "laravel-echo": "^2.1.4",
     "openai": "^4.96.2",
     "pinia": "^3.0.2",
+    "pusher-js": "^8.4.0",
     "qrcode": "^1.5.4",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.6.13",
